DTS-49602: added test cases